# nutrition-pad

./: .gitignore  CLAUDE.md  README.md  amounts-ui.md  claude.md  client-keepalive.md  dev-server  fasting-time.md  food-spec.md  foods-ui.md  foods.toml  hacking.md  llm-use.md  meals.json  notes-ui.md  principles.md  pyproject.toml  release  resolving-unknowns.md  rule-food.md  rules.md  run-tests  screenshot.py  start-with-watchdog.sh  take-screenshot  testing.md  todo-tests.md  ui.md  watchdog.py
nexus-10-test/: emulate-test  foods-orig.toml  manual-amounts
nutrition_pad/: amounts.py  calories.py  client_cli.py  data.py  entries_cli.py  food_cli.py  main.py  meals.py  notes.py  notes_cli.py  polling.py  record_cli.py  styles.py  unknown_cli.py
tests/: README.md  run_all_tests.sh  slider_propagation.py  test_api_routes.py  test_backdate_entry.py  test_dashboard_refresh.py  test_entries_api.py  test_food_fields.py  test_meal_mode_sync.py  test_meals.py  test_nutrition_food_cli.py  test_nutrition_unknown_cli.py
